# Simulation_BN_Puno

./: .gitignore  Analisis_Simulacion_BN_Puno.ipynb  project_001.md  pyproject.toml  streamlit_app.py
.atl/: skill-registry.md
backupMemory/: ATM_SIMULATION_SPEC_FULL_MEMORY.md  PROJECT_CURRENT_STATE_MEMORY.md
data/: atm_state_log.csv  customer_event_log.csv  system_snapshot_log.csv
diagrams/: atm_activity.puml  atm_bpmn_equivalent.puml  atm_causal_map.puml  atm_data_model.puml  atm_simulation_architecture.puml  atm_state.puml  atm_use_case.puml
docs/: ATM_SIMULATION_SPEC.md  PROJECT_CONTINUITY.md  PROJECT_PRESENTATION_SPLIT.md  SIMULATION_UI_DESIGN.md
drive sources/: Dataset - BN.xlsx  Muestreo01.csv  Simulation BN ATM.docx
muestreo/: Simulacion_Cajeros_Puno_Ajustada.xlsx  Simulacion_Puno_Colas_Reales.xlsx
scripts/: analyze_current.py  recalibrate.py  recalibrate_v2.py  validate_final.py
src/atm_simpy_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/atm_simulator/: __init__.py  cli.py  config.py  domain.py  io.py  kpi.py  policies.py  random.py  runner.py  scenarios.py  state.py  tracing.py
src/atm_simulator/processes/: abandonment.py  arrivals.py  contingencies.py  customer_flow.py  service.py  snapshots.py
tests/: test_behavioral_contracts.py  test_domain.py  test_policies.py  test_random.py  test_replay.py  test_runner.py  test_scenarios.py
